objects/NGAMSettingsHierarchy__c.object
<CustomObject>
    <fields>
        <fullName>ApexSystemUserOrProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used in Apex to determine if a user or profile has admin rights to bypass error messages. Normally, this is checked for System Administrator profile and NGAM Integration profile only.</description>
        <inlineHelpText>This checkbox is used in Apex to determine if a user or profile has admin rights to bypass error messages. Normally, this is checked for System Administrator profile and NGAM Integration profile only.</inlineHelpText>
        <label>Apex System User Or Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ByPassAccountValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows entity to by-pass validation rules on Account</description>
        <inlineHelpText>Allows entity to by-pass validation rules on Account</inlineHelpText>
        <label>By-Pass Account Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ByPassEventCampMemberValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By-Pass Event CampMember ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CannotCUDActivityAfterDays__c</fullName>
        <description>Controls how many days after the activity date of a task or date of a corresponding activity contact or activity product a user can create, update, or delete an activity.  Used in trigger and validation rules.</description>
        <inlineHelpText>Controls how many days after the activity date of a task or date of a corresponding activity contact or activity product a user can create, update, or delete an activity.</inlineHelpText>
        <label>Cannot CUD Activity After Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DictionaryItemVFPageView__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If any profile user need to access complete Dictionary Item record details then this check box needs to be checked.</description>
        <inlineHelpText>If this profile user need to access complete Dictionary Item record details on the VF page then this check box needs to be checked.</inlineHelpText>
        <label>Dictionary Item VF Page View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InitiateEmailOptInCanBeSetToFalse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the entity can set the Initiate Email Opt-In flag on Contact to false; meant to ensure that automations in Pardot set this flag - not users.</description>
        <inlineHelpText>If checked, the entity can set the Initiate Email Opt-In flag on Contact to false; meant to ensure that automations in Pardot set this flag - not general users.</inlineHelpText>
        <label>Initiate Email Opt-In Can Be Set To Fals</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NGAM Settings - Hierarchy</label>
</CustomObject>